--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "strict": true
     },
     "include": [
-        "src/*.ts"
+        "src/*.ts",
+        "src/lib/*.ts"
     ],
     "exclude": [
         "node_modules"
